<resources>
    <string name="app_name">Expert Movie</string>
    <string name="title">Nama Film</string>
    <string name="year">tahun</string>
    <string name="description">Description</string>
    <string name="error">Data not found</string>
    <string name="rating">Rating:</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite</string>

</resources>