<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/frame"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backdrop_image"
            android:layout_width="match_parent"
            tools:background="@drawable/ic_movie"
            android:layout_height="200dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:elevation="8dp"
            android:id="@+id/image_poster"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            tools:src="@drawable/corner"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btnFav"
            android:elevation="8dp"
            android:layout_width="56dp"
            android:layout_height="46dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/corner"
            android:contentDescription="favorite"
            android:src="@drawable/ic_favorite_border"
            tools:ignore="HardcodedText" />

    </FrameLayout>


    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        tools:text="@string/year" />
    <TextView
        android:id="@+id/text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date"
        tools:text="@string/year" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/rating"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"

        android:progressBackgroundTint="@color/softBlack"
        android:progressTint="#FFE500"
        app:layout_constraintLeft_toRightOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        tools:text="null"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <LinearLayout
        android:id="@+id/cover"
        android:background="@color/dark_grey"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="14sp"
            tools:text="@string/description" />

    </LinearLayout>




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        app:lottie_rawRes="@raw/cubes"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="15dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>